Small cleanup, make so the AI bot can actually concede